chore: Applied IJ inspections
lambda, method references, var, enhanced switch, import statements, generics, line ending etc.